# Experiment1

./: .cspell.json  .editorconfig  .flake8  .gitignore  .markdownlint.jsonc  .markdownlintignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: JitAccess.yml
.github/acl/: access.yml
.github/compliance/: inventory.yml
.github/policies/: branch-protection.yml  jit.yml
.github/workflows/: build_validation_workflow.yml  cd-workflow.yml  chat_with_pdf_ci_dev_workflow.yml  chat_with_pdf_pr_dev_workflow.yml  ci-workflow.yml  ci.yaml  create-release.yml  deploy-docs.yml  evaluate-workflow.yml  platform_ci_dev_workflow.yml  platform_pr_dev_workflow.yml  pr-title-checker.yaml  pr-workflow.yaml  pr-workflow.yml  promptflow-cd-workflow.yml  promptflow-ci-workflow.yml  reusable-cd-workflow.yml  run-workflow.yml  template-build-verification.yaml  template-ci.yaml  template-pr.yaml  unit_test_pr.yml  validate-docker.yml
config/: .env.example  deployment_config.json
data/: bert-paper-qna-1-line.jsonl  bert-paper-qna-3-line.jsonl  bert-paper-qna.jsonl
docker/: Dockerfile  docker-compose.yml
docker/promptflow/: run
docs/: Backlog-traceability.md  Decision-Log.md  README.md  backlog-integration-with-github.md  developer-guide.md  setup-guide.md
docs/adrs/: 0001-code-repository-structure.md  001-record-architecture-decisions.md  002-code-repository-structure.md  003-use-and-provision-storage-account.md  004-use-and-provision-azure-container-registry.md  005-single-aml-per-environment.md  006-aiga-project-creation.md  007-observability-prompt-flow.md  008-llmops-promptflow-template.md  009-aiga-dev-kit.md  010-aiga-project-structure.md  011-rag-experiment-accelerator.md  012-flow-deployment-options.md  013-aiga-provisioning-thru-devkit.md  014-aiga-evaluation-methodology.md  014-component-componet-access-strategy.md  015-component-componet-access-strategy.md  016-AIGA-RBAC.md  017-document-processing-ci-cd.md  017-sharing-aiga-responses.md
docs/contributing/: adding-metrics.md  backlog-integration-with-github.md  branching-strategy.md  developer-guide.md  promptflow.md
docs/design/: AI Evaluation.md  accountability-report.md  ai-evaluation.md  aiga-infrastructure.md  aiga-template-components.md  decision-log.md  document-loading.md  genai-edge-cases.md  identity-and-access.md  lifecycle.md  model-evaluation-success-criteria.md  reference-architecture.md  template-components.md
docs/onboarding/: adding-metrics.md  convert-jsonl.md  deployment.md  document-loading.md  environment-variables.md  experiment-configuration-guide.md  experiment-evaluate-locally.md  getting-started.md  github-actions.md  github-secrets.md  github-variables.md  llmops.md  models.md  observability.md  provisioning-secrets.md  register-data-assets.md  run-chat-with-pdf.md  running-promptflow.md  running-with-docker.md  tools.md  workflows.md
llmops/common/: common.py  experiment.py  experiment_cloud_config.py  jsonl_converter.py  prompt_eval.py  prompt_pipeline.py  register_data_asset.py
promptflow/: README.MD  experiment.pr.yaml  experiment.yaml  sample-request.json
promptflow/Experiment1_inference/: requirements.txt
promptflow/chat_with_pdf/: README.MD  experiment.yaml
promptflow/environment/: env.sample.yaml  env.yaml
promptflow/evaluation/: flow.dag.yaml
promptflow/inference/: aisearch.yaml  flow.dag.yaml  openai.yaml  (+2 more)
validation_scripts/: Readme.md  aisearch.py  aml.py  blob.py  create_connection.py  keyvault.py  mlflow_aml.py  pf_aml.py  sql.py
(+102 files in other folders)
